<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sitl_ros2_cv</name>
  <version>1.0.0</version>
  <description>SITL ROS2 Package for Image Processing and Computer Vision Applications</description>
  <maintainer email="sktlgt93@gmail.com">koh</maintainer>
  <license>Apache License 2.0</license>

  <depend>sitl_ros2_interfaces</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
